@@ -101,10 +101,6 @@ name|KeyValueHeap
 name|heap
 decl_stmt|;
 specifier|private
-name|ScanDeleteTracker
-name|deleteTracker
-decl_stmt|;
-specifier|private
 name|KeyValue
 operator|.
 name|KVComparator
@@ -125,12 +121,6 @@ operator|=
 name|store
 operator|.
 name|comparator
-expr_stmt|;
-name|deleteTracker
-operator|=
-operator|new
-name|ScanDeleteTracker
-argument_list|()
 expr_stmt|;
 name|KeyValue
 name|firstKv
@@ -193,12 +183,6 @@ operator|.
 name|comparator
 operator|=
 name|comparator
-expr_stmt|;
-name|deleteTracker
-operator|=
-operator|new
-name|ScanDeleteTracker
-argument_list|()
 expr_stmt|;
 name|KeyValue
 name|firstKv
@@ -317,12 +301,6 @@ return|return
 literal|false
 return|;
 block|}
-comment|// between rows.
-name|deleteTracker
-operator|.
-name|reset
-argument_list|()
-expr_stmt|;
 name|KeyValue
 name|kv
 decl_stmt|;
@@ -359,101 +337,6 @@ comment|// reached next row
 return|return
 literal|true
 return|;
-block|}
-comment|// if delete type, output no matter what:
-if|if
-condition|(
-name|kv
-operator|.
-name|getType
-argument_list|()
-operator|!=
-name|KeyValue
-operator|.
-name|Type
-operator|.
-name|Put
-operator|.
-name|getCode
-argument_list|()
-condition|)
-block|{
-name|deleteTracker
-operator|.
-name|add
-argument_list|(
-name|kv
-operator|.
-name|getBuffer
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getQualifierOffset
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getQualifierLength
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getTimestamp
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getType
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|writer
-operator|.
-name|append
-argument_list|(
-name|heap
-operator|.
-name|next
-argument_list|()
-argument_list|)
-expr_stmt|;
-continue|continue;
-block|}
-if|if
-condition|(
-name|deleteTracker
-operator|.
-name|isDeleted
-argument_list|(
-name|kv
-operator|.
-name|getBuffer
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getQualifierOffset
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getQualifierLength
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getTimestamp
-argument_list|()
-argument_list|)
-condition|)
-block|{
-name|heap
-operator|.
-name|next
-argument_list|()
-expr_stmt|;
-continue|continue;
 block|}
 name|writer
 operator|.
@@ -510,12 +393,6 @@ return|return
 literal|false
 return|;
 block|}
-comment|// between rows.
-name|deleteTracker
-operator|.
-name|reset
-argument_list|()
-expr_stmt|;
 name|KeyValue
 name|kv
 decl_stmt|;
@@ -552,101 +429,6 @@ comment|// reached next row
 return|return
 literal|true
 return|;
-block|}
-comment|// if delete type, output no matter what:
-if|if
-condition|(
-name|kv
-operator|.
-name|getType
-argument_list|()
-operator|!=
-name|KeyValue
-operator|.
-name|Type
-operator|.
-name|Put
-operator|.
-name|getCode
-argument_list|()
-condition|)
-block|{
-name|deleteTracker
-operator|.
-name|add
-argument_list|(
-name|kv
-operator|.
-name|getBuffer
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getQualifierOffset
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getQualifierLength
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getTimestamp
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getType
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|results
-operator|.
-name|add
-argument_list|(
-name|heap
-operator|.
-name|next
-argument_list|()
-argument_list|)
-expr_stmt|;
-continue|continue;
-block|}
-if|if
-condition|(
-name|deleteTracker
-operator|.
-name|isDeleted
-argument_list|(
-name|kv
-operator|.
-name|getBuffer
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getQualifierOffset
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getQualifierLength
-argument_list|()
-argument_list|,
-name|kv
-operator|.
-name|getTimestamp
-argument_list|()
-argument_list|)
-condition|)
-block|{
-name|heap
-operator|.
-name|next
-argument_list|()
-expr_stmt|;
-continue|continue;
 block|}
 name|results
 operator|.
