@@ -419,7 +419,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|3
+literal|11
 argument_list|,
 name|results
 operator|.
@@ -446,7 +446,7 @@ name|assertEquals
 argument_list|(
 name|kvs
 index|[
-literal|5
+literal|1
 index|]
 argument_list|,
 name|results
@@ -461,7 +461,7 @@ name|assertEquals
 argument_list|(
 name|kvs
 index|[
-literal|8
+literal|2
 index|]
 argument_list|,
 name|results
@@ -469,6 +469,126 @@ operator|.
 name|get
 argument_list|(
 literal|2
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|kvs
+index|[
+literal|3
+index|]
+argument_list|,
+name|results
+operator|.
+name|get
+argument_list|(
+literal|3
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|kvs
+index|[
+literal|5
+index|]
+argument_list|,
+name|results
+operator|.
+name|get
+argument_list|(
+literal|4
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|kvs
+index|[
+literal|4
+index|]
+argument_list|,
+name|results
+operator|.
+name|get
+argument_list|(
+literal|5
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|kvs
+index|[
+literal|6
+index|]
+argument_list|,
+name|results
+operator|.
+name|get
+argument_list|(
+literal|6
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|kvs
+index|[
+literal|8
+index|]
+argument_list|,
+name|results
+operator|.
+name|get
+argument_list|(
+literal|7
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|kvs
+index|[
+literal|7
+index|]
+argument_list|,
+name|results
+operator|.
+name|get
+argument_list|(
+literal|8
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|kvs
+index|[
+literal|9
+index|]
+argument_list|,
+name|results
+operator|.
+name|get
+argument_list|(
+literal|9
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|kvs
+index|[
+literal|10
+index|]
+argument_list|,
+name|results
+operator|.
+name|get
+argument_list|(
+literal|10
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -655,7 +775,7 @@ argument_list|)
 expr_stmt|;
 name|assertEquals
 argument_list|(
-literal|2
+literal|3
 argument_list|,
 name|results
 operator|.
@@ -690,6 +810,21 @@ operator|.
 name|get
 argument_list|(
 literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|kvs
+index|[
+literal|2
+index|]
+argument_list|,
+name|results
+operator|.
+name|get
+argument_list|(
+literal|2
 argument_list|)
 argument_list|)
 expr_stmt|;
